src/objects/DealProduct__c.object
<CustomObject>
    <description>This custom object is being used by the Partner to add products to their deals and map over to the converted deal Opportunity product lines exposed to Partner.</description>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Line</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <errorMessage>This Product is not Available for Partner</errorMessage>
            <filterItems>
                <field>Product2.Partner_Visible__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>DealProducts</relationshipLabel>
        <relationshipName>DealProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <errorMessage>You Can&apos;t add a Product after your deal is Approved.</errorMessage>
            <filterItems>
                <field>Lead.Status</field>
                <operation>notEqual</operation>
                <value>Pending Approval, Approved, In Progress</value>
            </filterItems>
            <filterItems>
                <field>Lead.IsConverted</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>Lead.IsConverted</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Lead.Status</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>DealProducts</relationshipLabel>
        <relationshipName>DealProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>BusinessLine__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nokia_Financial_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO Plan / Receipt</label>
        <referenceTo>Nokia_Financial_Calendar__c</referenceTo>
        <relationshipLabel>DealProducts</relationshipLabel>
        <relationshipName>DealProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>DealProduct</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>DealProduct Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DealProducts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_add_product_after_lead_Conversion</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW() ,ISPICKVAL(Deal__r.Status, &apos;Closed - Converted (Qualified)&apos;))</errorConditionFormula>
        <errorMessage>You can&apos;t Add a product after the Lead is converted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_update_product</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISNEW()), (PRIORVALUE( BusinessLine__c)&lt;&gt;  BusinessLine__c ),ISPICKVAL(Deal__r.Status, &apos;Closed - Converted (Qualified)&apos;))</errorConditionFormula>
        <errorMessage>You cannot update product once deal is approved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_cant_be_added_after_Approval</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISPICKVAL(Deal__r.Status, &apos;Pending Approval&apos;),ISPICKVAL(Deal__r.Status, &apos;Approved&apos;),ISPICKVAL(Deal__r.Status, &apos;In Progress&apos;))</errorConditionFormula>
        <errorMessage>You Can&apos;t add a Product after your deal is In Progress Or Approved Or Pending Approval .!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Value_shouldnot_be_zero</fullName>
        <active>true</active>
        <errorConditionFormula>(($Profile.Name &lt;&gt; $Label.Data_Loader_Profile_Name) &amp;&amp; (Value__c &lt;= 0 || ISBLANK(Value__c)))
 &amp;&amp; (($Profile.Name &lt;&gt; $Label.System_Admin_Profile) &amp;&amp; (Value__c &lt;= 0 || ISBLANK(Value__c)))</errorConditionFormula>
        <errorDisplayField>Value__c</errorDisplayField>
        <errorMessage>Line Item Value should be greater than 0 and cannot be blank.</errorMessage>
    </validationRules>
</CustomObject>